--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,23 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .form-control {
+.form-control {
   @apply relative flex w-full flex-col pb-6;
 }
 .form-control label {
   @apply sr-only;
 }
 .form-input {
-  @apply rounded border-gray-500  text-black placeholder-gray-500 shadow focus:ring-2 valid:focus:ring-cyan-600 invalid:focus:border-transparent invalid:focus:ring-red-400;
+  @apply bg-theme   text-revert-theme placeholder-revert-theme/70 shadow focus:ring-2 valid:focus:ring-sky-600 invalid:focus:border-transparent invalid:focus:ring-red-400;
 }
 .form-error {
   @apply absolute bottom-0 left-0 p-1 text-xs font-bold text-red-400;
-} */
+}
 
 html,
 body,
 #root {
-  min-height: 100vh;
+  height: 100vh;
+
   scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
